--- a/index.html
+++ b/index.html
@@ -102,6 +102,22 @@
         <div class="content">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         </div>
+
+        <!--------------------------------------------------------------------->
+
+        <h2>Categoria 4:</h2>
+
+        <details><summary>Post 4.1</summary>
+            <p>
+
+            #### yes, even hidden code blocks!
+
+            ```python
+            print("hello world!")
+            ```
+
+            </p>
+        </details>
         
     </body>
 </html>
