--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
         <style>
             body {
-                background-color: lightgray;
+                background-color: #f4f4f4;
                 font-size: 150%;
-                color: dimgray;
+                color: #373737;
                 font-family: sans-serif;
                 width: 66%;
                 margin: auto
@@ -22,7 +22,7 @@
                 padding: 5px;
                 font-size: 150%;
                 font-family: monospace;
-                background-color: dimgray;
+                background-color: #373737;
                 color: white;
             }
             details p {
