--- a/index.html
+++ b/index.html
@@ -3,83 +3,19 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
-        <!--<base href="https://carloslunamota.github.io/">-->
-        <meta name="theme-color" content="#101820" />
         <meta name="description" content="Carlos Luna-Mota personal page">
         <meta name="robots" content="index,follow" />
         <meta name="rating" content="General">
+        <meta name="theme-color" content="#101820" />
         <meta name="format-detection" content="telephone=no">
+        <base href="https://carloslunamota.github.io/">
         <link rel="canonical" href="https://carloslunamota.github.io/" />
         <link rel="index" href="https://carloslunamota.github.io/">
         <link rel="license" href="https://creativecommons.org/licenses/by/4.0" />
         <link rel="icon" href="img/favicon.ico" sizes="16x16 32x32" />
         <link rel="icon" href="img/favicon.png" sizes="192x192" />
-
+        <link rel="stylesheet" type="text/css" href="style.css">
         <title>Pseudolog</title>
-
-        <style>
-            :root {
-              --white:       #f4f4f4;
-              --grey:        #d9e0e0;
-              --black:       #101820; /*#373737;*/
-              --color-light: #FEE715; /*#EED202;*/ /*#FFD800;*/ /*#E9B000;*/
-              --color-dark:  #5f5800; /*#423800;*/ /*#B8860B;*/
-              --thickness:   3px; 
-              --padding:     25px;
-            }
-            * { font-family:      sans-serif;
-                color:            var(--black); }
-            html { background-color: var(--white); }
-            body { max-width:   750px;
-                   margin:      0px auto;
-                   line-height: 1.75;
-            }
-            hr { height:           var(--thickness);
-                 border-width:     0px;
-                 margin:           var(--padding);
-                 background-color: var(--black);
-            }
-            a { text-decoration:none; 
-                color:            var(--black);}
-            a:hover { color: var(--color-dark)!important; }
-            blockquote { border-left: var(--thickness) solid var(--black);
-                         padding: var(--thickness) var(--padding);
-                         background-color: var(--grey); }
-            pre { font-family:      consolas, monospace;
-                  display:          inline-block;
-                  font-size:        90%;
-                  margin:           0px;
-            }
-            .center {
-              display: block;
-              margin-left: auto;
-              margin-right: auto;
-            }
-            code { font-family: consolas, monospace; }
-            h1, h2, h3, h4, p { padding: 0px var(--padding); }
-            article { clear:both; }
-            header details summary { font-size: 220%; }
-            header { margin: var(--padding) 0px; }
-            footer { margin: var(--padding) 0px;
-                     border-top: var(--thickness) solid var(--black); }
-            details summary { padding:          5px var(--padding);
-                              font-size:        165%;
-                              font-family:      monospace;
-                              background-color: var(--black);
-                              color:            var(--white);
-                              cursor:           pointer;
-                              transition:       color .6s ease;
-                              list-style-type:  none;
-                              animation:        sweep .3s ease-in;
-            }
-            details summary:focus { outline: none; }
-            details summary::-webkit-details-marker { display: none; }
-            details summary::marker { display: none; }
-            details[open] summary {  color: var(--color-light); }
-            details[open] summary ~ * { animation: sweep .6s ease-in; }
-            @keyframes sweep { 0% {opacity: 0;} 100% {opacity: 1;} }
-        </style>
     </head>
 
     <!------------------------------------------------------------------------->
@@ -95,23 +31,8 @@
         <!--------------------------------------------------------------------->
 
         <article>
-            <details><summary>/math/EgyptianTangram</summary>
-                 <p><img src="img/WorkInProgress.png" width="50%" class="center" /></p>
-            </details>
-        </article>
-
-
-        <article>
-            <details><summary>/math/GeometryCheatSheet</summary>
-                 <p><img src="img/WorkInProgress.png" width="50%" class="center" /></p>
-            </details>
-        </article>
-
-        <!--------------------------------------------------------------------->
-
-        <article>
             <details><summary>/code/CLM_LIBS</summary>
-                <p><code>CLM_LIBS.h</code> is set of public domain C libraries implemented as code-generating macros.</p>
+                <p><code>CLM_LIBS.h</code> is set of public domain libraries implemented as code-generating macros.</p>
                 <p>You can find the <code>CLM_LIBS.h</code> file and all the documentation in the <strong><a href="https://github.com/CarlosLunaMota/CLM_LIBS">CLM_LIBS</a></strong> repository.</p>
                 <p><strong>IMPORT_CLM_TIME:</strong> time and date related functions</p>
                 <blockquote>
@@ -288,13 +209,28 @@
         <!--------------------------------------------------------------------->
 
         <article>
-            <details><summary>/game/T3CS</summary>
+            <details><summary>/math/EgyptianTangram</summary>
+                 <p><img src="img/WorkInProgress.png" width="50%" class="center" /></p>
+            </details>
+        </article>
+
+
+        <article>
+            <details><summary>/math/GeometryCheatSheet</summary>
+                 <p><img src="img/WorkInProgress.png" width="50%" class="center" /></p>
+            </details>
+        </article>
+
+        <!--------------------------------------------------------------------->
+
+        <article>
+            <details><summary>/game/TriangularDeck</summary>
                  <p><img src="img/WorkInProgress.png" width="50%" class="center" /></p>
             </details>
         </article>
 
         <article>
-            <details><summary>/game/TriangularDeck</summary>
+            <details><summary>/game/T3CS</summary>
                  <p><img src="img/WorkInProgress.png" width="50%" class="center" /></p>
             </details>
         </article>
@@ -315,7 +251,6 @@
 
         <article>
             <details><summary>/nice/books</summary>
-                <p>Books work reading:</p>
                 <ul>
                     <li><strong>Cuentos completos</strong> by <em>Jorge Luís Borges</em></li>
                     <li><strong>The Eyre Affair</strong> by <em>Jasper Fforde</em></li>
